started npm and truffle, added package.json, truffle.js and README.md file

--- a/.gitignore
+++ b/.gitignore
@@ -257,3 +257,6 @@ package-lock.json
 *.code-workspace
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,vscode,node,solidity,soliditytruffle,git
+
+log/
+contracts/artifacts/
