--- a/package.json
+++ b/package.json
@@ -15,9 +15,6 @@
     "start": "node webserver.js"
   },
   "dependencies": {
-    "@truffle/contract": "^4.3.6",
-    "express": "^4.17.0",
-    "jquery": "^3.5.0",
-    "web3": "^1.3.0"
+    "express": "^4.17.0"
   }
 }
